tests/NormalTests/paczka1/small_fuzzy/20306148.err
Error in line 1: 4Tg A568 11,2
Error in line 4: TfwHRE5e S314 39,2
Error in line 3: 4Tg S707 5,8
